Fixed layout issues

--- a/code/admin/public/stylesheets/style.css
+++ b/code/admin/public/stylesheets/style.css
@@ -158,7 +158,8 @@ color:black;
 
 .sched-grid {
 	/*width: 100%;*/
-	height: 100px;
+	height: 300px;
+	/*overflow: scroll;*/
 }
 
 .colt {
